src/snapshots/changesette__changelog__tests__rejects_a_changelog_without_sections.snap
---
source: src/changelog.rs
expression: "format!(\"{:#}\", extract(\"no-h2\", \"1.0.0\").unwrap_err())"
---
version 1.0.0 not found
