src/snapshots/changesette__changelog__tests__renders_an_entry_without_prs.snap
---
source: src/changelog.rs
expression: "render(&[entry(&[], \"Add SERPINFO satellites support\")],\nSome(\"iorate/ublacklist\"),)"
---
## 10.1.0

### Minor Changes

- Add SERPINFO satellites support
