src/snapshots/changesette__changelog__tests__renders_without_links_when_integration_is_off.snap
---
source: src/changelog.rs
expression: "render(&[entry(&[12, 23], \"Add SERPINFO satellites support\")], None,)"
---
## 10.1.0

### Minor Changes

- Add SERPINFO satellites support
