src/snapshots/changesette__changelog__tests__replaces_an_existing_section_of_the_same_version.snap
---
source: src/changelog.rs
expression: "upsert(\"same-version-exists\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- Add SERPINFO satellites support

## 0.9.0

### Patch Changes

- Fix something
