src/snapshots/changesette__changelog__tests__supplements_a_missing_h1.snap
---
source: src/changelog.rs
expression: "upsert(\"no-h1\", \"1.0.0\")"
---
# ublacklist

## 1.0.0

### Minor Changes

- Add SERPINFO satellites support

## 0.9.0

### Minor Changes

- Add something
